<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypename="package" schemaversion="3.0"?>
<package format="3">
  <name>joint_mover_cpp</name>
  <version>1.0.0</version>
  <description>C++ ROS 2 package for controlling joint movements on Fanuc robots</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>fanuc_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>